<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSchedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiEventName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEventName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_of_the_event" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiEventPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tiEventName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEventPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_location" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tiEventPlace">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/additional_description"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/tiEndTime"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tiDescription">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start_time"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tiStartTime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tiStartTime"
                    app:layout_constraintTop_toTopOf="@+id/tiStartTime">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/end_time"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvSetRemainder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/set_remainder"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tiStartTime" />

                <LinearLayout
                    android:id="@+id/llRemainderLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/tvSetRemainder">

                    <CheckBox
                        android:id="@+id/cbRemainder1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/remainder_1" />

                    <Spinner
                        android:id="@+id/spRemainder1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        app:layout_constraintStart_toEndOf="@+id/cbRemainder1"
                        app:layout_constraintTop_toTopOf="@+id/cbRemainder1" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llRemainderRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/llRemainderLeft">


                    <CheckBox
                        android:id="@+id/cbRemainder2"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:text="@string/remainder_2" />

                    <Spinner
                        android:id="@+id/spRemainder2"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/llRemainderRight">

                    <CheckBox
                        android:id="@+id/cbRemainder3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/remainder_3" />


                    <Spinner
                        android:id="@+id/spRemainder3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2" />


                </LinearLayout>

                <Button
                    android:id="@+id/btnAddEditEvent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_event"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <Button
                    android:id="@+id/btnDeleteEvent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/danger"
                    android:text="@string/delete_event"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnAddEditEvent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>